--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 			<div id="body">
 			
 				<div id="quote" class="section">
-					<h3>"Good [examples of digital interaction design] oscillate between hiding and revealing themselves."</h3>
-					<h4>- Bolter and Gromala 68</h4>
+					<h3>&#8220;Good [examples of digital interaction design] oscillate between hiding and revealing themselves.&#8221;</h3>
+					<h4>&#8211; David Bolter &amp; Diane Gromala</h4>
 				</div>
 				
 				<div id="icons" class="section">
