--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 		<link rel="stylesheet" href="css/styles.css" type="text/css"/>
 		<link href='http://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
+		<!-- modernizr is an exception to the "js goes at the bottom" rule because it needs to be loaded before the rest of the page -->
+		<script src="js/modernizr.custom.79293.js"></script>
 	</head>
 	<body>
 		<div id="container">
