clean up navigation html

--- a/index.html
+++ b/index.html
@@ -23,16 +23,8 @@
 					<a href="#examples">	<img class="navIcons" src="images/navigation/examples.png" alt="squares" width="23" height="20"/>	</a>
 					<a href="#code">		<img class="navIcons" src="images/navigation/code.png" alt="brackets" width="37" height="19"/>		</a>
 					<a href="#buttons">		<img class="navIcons" src="images/navigation/buttons.png" alt="icon" width="20" height="20"/>		</a>
-					<a href="#explanation">	<img class="navIcons" src="images/navigation/explanation.png" alt="squares" width="30" height="18"/>	</a>
-					<a href="#quote">		<img class="navIcons" src="images/navigation/quote.png" alt="squares" width="45" height="20"/>		</a>
-					
-					<!--
-					<a href="#examples">	<h2 id="navExamples">	Examples</h2></a>
-					<a href="#code">		<h2 id="navCode">		Code</h2></a>
-					<a href="#buttons">		<h2 id="navButtons">	Icons&#47;Buttons</h2></a>
-					<a href="#explanation">	<h2 id="navExplanation">Explanation</h2></a>
-					<a href="#quote">		<h2 id="navQuote"		>Quote</h2></a>
-					-->
+					<a href="#explanation">	<img class="navIcons" src="images/navigation/explanation.png" alt="lines" width="30" height="18"/>	</a>
+					<a href="#quote">		<img class="navIcons" src="images/navigation/quote.png" alt="quotes" width="45" height="20"/>		</a>
 					
 				</div>
 			</div>
